test-cases/negative/test_093_undefined_method.lay
# negative test: calling undefined method on object
# expected: type checker should catch this

define class Person
  the property name of type String

the variable person of type Person is a new Person with
  name is 'John'

call person dot undefinedMethod


